<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="android.reserver.projectc196v5.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_terms"
        android:name="android.reserver.projectc196v5.ui.terms.TermFragment"
        android:label="@string/menu_terms"
        tools:layout="@layout/fragment_terms" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="android.reserver.projectc196v5.ui.courses.CourseFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@id/nav_assessments"
        android:name="android.reserver.projectc196v5.ui.assessments.AssessmentFragment"
        android:label="@string/menu_assessment"
        tools:layout="@layout/fragment_assessments" />

    <fragment
        android:id="@id/nav_assessments"
        android:name="android.reserver.projectc196v5.ui.settings.SettingsFragment"
        android:label="@string/menu_assessment"
        tools:layout="@layout/fragment_settings" />

</navigation>